スネークケースをキャメルケースに変換させて出力させる
