# server/docs/swagger.json
@@ -5,7 +5,8 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/localhost:8080",
+    "host": "localhost:8080",
+    "basePath": "/",
     "paths": {
         "/api/v1/book": {
             "post": {
@@ -85,7 +86,17 @@
     "definitions": {
         "model.Book": {
             "type": "object",
+            "required": [
+                "bought_at",
+                "content",
+                "title"
+            ],
             "properties": {
+                "bought_at": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "2021-07-01"
+                },
                 "content": {
                     "type": "string",
                     "example": "本の内容"
@@ -93,6 +104,15 @@
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "status": {
+                    "description": "0: 気になる\n1: 購入済\n2: 読了",
+                    "type": "integer",
+                    "enum": [
+                        0,
+                        1,
+                        2
+                    ]
                 },
                 "title": {
                     "type": "string",
